<resources>
    <string name="app_name">Hackathon_PerevalFSTR</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Fragment Welcome Strings -->
    <string name="welcome_join_button">ВОЙТИ</string>
    <string name="welcome_tags">#ПОХОДЫ #СВОБОДА\n#ПРЕОДОЛЕНИЯ #ОТКРЫТИЯ</string>
    <string name="welcome_app_description">Наполняем каталог перевалов вместе</string>
    <string name="welcome_user_can_do_description">ОПИШИ ПЕРЕВАЛ</string>

    <!-- Fragment com.example.hackathon_perevalfstr.domains.User Profile Strings -->
    <string name="user_profile_greeting">Добро пожаловать</string>
    <string name="acquaintance">Давайте знакомиться</string>
    <string name="some_id">
        Запишем вас:
\n\ \ \ ·в список помогавших наполнять базу перевалов
\n\ \ \ ·в качестве первопроходителей перевала, если он новый
\n\ \ \ ·в базу туристов ФСТР</string>
    <string name="personal_information">Используя приложение, вы даёте согласие ФСТР
\nна обработку персональных данных</string>

    <!--com.example.hackathon_perevalfstr.domains.User Profile Fields-->
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="email">E-mail будет логином и основным средством связи с вами</string>
    <string name="email_hint">\ \ \ \ \ \ \ \ \ \ \ \ yourname@mail.ru</string>
    <string name="phone">По желанию</string>
    <string name="phone_hint">\ \ \ \ \ \ \ \ \ \ \ \ +7_</string>
    <string name="social_hint_link">\ \ \ \ \ \ \ \ \ \ \ \ ссылка на соцсети</string>
    <string name="social_link">По желанию</string>

    <!--com.example.hackathon_perevalfstr.domains.Pereval List-->
    <string name="add_pereval_hint">Нажмите на +\nчтобы добавить перевал</string>
    <string name="to_see_perevals">Посмотреть базу перевалов</string>

    <!-- Add pereval fragment -->
    <string name="pereval_category">Категория перевала</string>
    <string name="information_button_text">i</string>
    <string name="pereval_name">Название перевала</string>
    <string name="weather">Сложность существенно увеличится в зависимости от погодных условий (снегопад, внезапное облединение склонов и пр.)</string>
    <string name="not_sure">Если вы не уверены в своей оценке категории</string>
    <string name="not_pass">Если вы не прошли этот перевал</string>
    <string name="date">Дата прохождения</string>
    <string name="date_picker_text">Дата/Время</string>
    <string name="today">Сегодня</string>
    <string name="coordinates">Координаты</string>
    <string name="photos">Фото</string>
    <string name="explanation">Поясните, что на фото</string>
    <string name="direction">Направление</string>
    <string name="send">Отправить</string>

    <!--keys-->
    <string name="shared_preferences_key">shared_preferences_for_pereval</string>
    <string name="user_key">user_key</string>
    <string name="last_name_key">last_name_key</string>
    <string name="first_name_key">first_name_key</string>
    <string name="patronymic_key">patronymic_key</string>
    <string name="email_key">email_key</string>
    <string name="phone_key">phone_key</string>
    <string name="soc_link_key">soc_link_key</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>